packages/cfpb-typography/src/atoms/links.less
.a-link {
  border-bottom-width: 0;

  .a-link__text {
    border-bottom-width: 1px;
    border-bottom-style: inherit;
  }
}

//
// Jump link
//

.a-link--jump {
  font-weight: 500;

  // Mobile only.
  .respond-to-max(@bp-xs-max, {
    display: flex;
    align-items: center;
    gap: unit(5px / @base-font-size-px, rem);

    // Only right-hand align arrow icons.
    .cf-icon-svg--right {
      margin-left: auto;
    }

    box-sizing: border-box;
    padding-top: unit(10px / @base-font-size-px, em);
    padding-bottom: unit(10px / @base-font-size-px, em);
    border-top-width: 1px;
    border-bottom-width: 1px;
    // 100% width is needed when block or jump link are applied to a <button>
    width: 100%;

    .a-link__text {
      border-bottom-width: 0;
    }
  });
}

// Mobile only.
.respond-to-max(@bp-xs-max, {

  // Handle the borders of jump links that are adjacent in a list
  li:has(.a-link--jump) + li:has(.a-link--jump) {
    .a-link--jump {
      position: relative;
      border-top: none;
    }

    .a-link--jump:hover:before {
      position: absolute;
      top: -1px;
      content: '';
      display: block;
      height: 1px;
      width: 100%;
      border-top: 1px solid currentColor;
    }
  }
});

